--- a/contacto.html
+++ b/contacto.html
@@ -13,66 +13,66 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 <body class="bg-black">
-  <!-- NAVEGACION -->
-  <nav class="navbar navbar-expand-sm bg-black">
-    <div class="container-fluid">
-      <a class="navbar-brand" align="left" href="#"><img src="imagenes/LOG.png" width="80" alt="logo 1"></a>
-      <button class="navbar-toggler bg-light" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarTogglerDemo02"> 
-        <a class="navbar-brand col-sm-4"><p class="text-light fst-italic fs-1 ms-1 ">SHOES STORE</p></a>  
-        <!-- LISTA DESKTOP -->
-      <div class="list1 "> 
-        <ul class="navbar-nav d-flex justify-content-center align-item-center me-4">
-          <li class="nav-item border border-light outline-dark rounded-pill ms-1 mb-2">
-            <a class="nav-link active text-light " align="center" aria-current="page" href="index.html">INICIO</a>
-          </li>
-          <li class="nav-item border border-light outline-dark rounded-pill ms-1 mb-2">
-            <a class="nav-link text-light" align="center" href="categoria.html">CATEGORIA</a>
-          </li>
-          <li class="nav-item border border-light outline-dark rounded-pill ms-1 mb-2">
-            <a class="nav-link text-light" align="center" href="nosotros.html" >NOSOTROS</a>
-          </li>
-          <li class="nav-item border border-light outline-dark rounded-pill ms-1 mb-2">
-            <a class="nav-link text-light" align="center" href="contacto.html">CONTACTO</a>
-          </li>
-          <div class="d-lg-none">
-          <li class="nav-item border border-light outline-dark rounded-pill ms-1 mb-2 ">
-            <a class="nav-link text-light" align="center" href="#">COMPRAS</a>
-          </li>
-          <div class="logozap d-sm-flex">
-            <button class="btn" type="button" ><img class="img-fluid" src="imagenes/LOG.png" width="250" alt=" comprag"></button>
-          </div>
-          </div>
-        </ul>
-      </div> 
-      </div>
-      <!-- COMPRA -->
-      <div class="compra d-none d-sm-block me-1">
-        <button class="btn" type="button" ><a href="compra.html"><img class="img-fluid" src="imagenes/compra.png" width="60" alt=" comprag"></a></button>
-      </div>
-    </div>
-  </nav>
-  <!-- LISTA TABLET -->
-  <nav class="lista d-none d-sm-block d-md-block d-lg-none">
-    <div class="lista-tablet "> 
-      <ul class="d-flex  align-item-center">
-        <li class="border border-light outline-dark rounded-pill">
-          <a class="text-light" align="center" href="index.html">INICIO</a>
+  <!-- encabezado -->
+<nav class="navbar navbar-expand-sm bg-black">
+  <div class="container-fluid">
+    <a class="navbar-brand" align="left" href="#"><img src="imagenes/logomax.jpg" width="80" alt="logo 1"></a>
+    <button class="navbar-toggler bg-light" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarTogglerDemo02"> 
+      <a class="navbar-brand col-sm-4"><p class="text-light fst-italic fs-1 ms-1 ">SHOES STORE</p></a> 
+      <!-- lista para desktop  -->
+    <div class="list1 "> 
+      <ul class="navbar-nav d-flex justify-content-center align-item-center me-4">
+        <li class="nav-item border border-light outline-dark rounded-pill ms-1 mb-2">
+          <a class="nav-link active text-light " align="center" aria-current="page" href="index.html">INICIO</a>
         </li>
-        <li class="border border-light outline-dark rounded-pill">
-          <a class="text-light" align="center" href="categoria.html">CATEGORIA</a>
+        <li class="nav-item border border-light outline-dark rounded-pill ms-1 mb-2">
+          <a class="nav-link text-light" align="center" href="categoria.html">CATEGORIA</a>
         </li>
-        <li class="border border-light outline-dark rounded-pill">
-          <a class="text-light" align="center" href="nosotros.html">NOSOTROS</a>
+        <li class="nav-item border border-light outline-dark rounded-pill ms-1 mb-2">
+          <a class="nav-link text-light" align="center" href="nosotros.html" >NOSOTROS</a>
         </li>
-        <li class="border border-light outline-dark rounded-pill">
-          <a class="text-light" align="center" href="contacto.html">CONTACTO</a>
+        <li class="nav-item border border-light outline-dark rounded-pill ms-1 mb-2">
+          <a class="nav-link text-light" align="center" href="contacto.html">CONTACTO</a>
         </li>
+        <div class="d-lg-none">
+        <li class="nav-item border border-light outline-dark rounded-pill ms-1 mb-2 ">
+          <a class="nav-link text-light" align="center" href="compra.html">COMPRAS</a>
+        </li>
+        <div class="logozap d-sm-flex">
+          <button class="btn" type="button" ><img class="img-fluid" src="imagenes/LOG.png" width="250"></button>
+        </div>
+        </div>
       </ul>
+    </div> 
     </div>
-    </nav>
+    <!-- compra -->
+    <div class="compra d-none d-sm-block me-1">
+      <button class="btn" type="button" ><a href="compra.html"><img class="img-fluid" src="imagenes/compra.png" width="60" alt=" comprag"></a></button>
+    </div>
+  </div>
+</nav>
+<!-- lista para tablet -->
+<nav class="lista d-none d-sm-block d-md-block d-lg-none">
+<div class="lista-tablet "> 
+  <ul class="d-flex  align-item-center">
+    <li class="border border-light outline-dark rounded-pill">
+      <a class="text-light" align="center" href="index.html">INICIO</a>
+    </li>
+    <li class="border border-light outline-dark rounded-pill">
+      <a class="text-light" align="center" href="categoria.html">CATEGORIA</a>
+    </li>
+    <li class="border border-light outline-dark rounded-pill">
+      <a class="text-light" align="center" href="nosotros.html">NOSOTROS</a>
+    </li>
+    <li class="border border-light outline-dark rounded-pill">
+      <a class="text-light" align="center" href="contacto.html">CONTACTO</a>
+    </li>
+  </ul>
+</div>
+</nav>
   <!-- SECCION DESKTOP -->
   <section class="d-none d-xl-block d-xxl-block">
     <div class="vi">
