--- a/index.html
+++ b/index.html
@@ -13,16 +13,15 @@
 </head>
 <body class="bg-black">
 <!-- encabezado -->
-<header>
-<nav class="navbar navbar-expand-sm bg-black mt-3">
+<nav class="navbar navbar-expand-sm bg-black">
   <div class="container-fluid">
-    <a class="navbar-brand" align="left" href="#"><img src="imagenes/LOG.png" width="80" alt="logo 1"></a>
+    <a class="navbar-brand" align="left" href="#"><img src="imagenes/logomax.jpg" width="80" alt="logo 1"></a>
     <button class="navbar-toggler bg-light" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarTogglerDemo02"> 
-      <a class="navbar-brand col-sm-4"><p class="text-light fst-italic fs-1 ms-1 ">Shoes Store</p></a>
-      <!-- lista para tablet   -->
+      <a class="navbar-brand col-sm-4"><p class="text-light fst-italic fs-1 ms-1 ">SHOES STORE</p></a> 
+      <!-- lista para desktop  -->
     <div class="list1 "> 
       <ul class="navbar-nav d-flex justify-content-center align-item-center me-4">
         <li class="nav-item border border-light outline-dark rounded-pill ms-1 mb-2">
@@ -35,14 +34,14 @@
           <a class="nav-link text-light" align="center" href="nosotros.html" >NOSOTROS</a>
         </li>
         <li class="nav-item border border-light outline-dark rounded-pill ms-1 mb-2">
-          <a class="nav-link text-light" align="center"href="contacto.html">CONTACTO</a>
+          <a class="nav-link text-light" align="center" href="contacto.html">CONTACTO</a>
         </li>
         <div class="d-lg-none">
         <li class="nav-item border border-light outline-dark rounded-pill ms-1 mb-2 ">
           <a class="nav-link text-light" align="center" href="compra.html">COMPRAS</a>
         </li>
         <div class="logozap d-sm-flex">
-          <button class="btn" type="button" ><img class="img-fluid"  src="imagenes/LOG.png" width="250" alt=" comprag"></button>
+          <button class="btn" type="button" ><img class="img-fluid" src="imagenes/LOG.png" width="250"></button>
         </div>
         </div>
       </ul>
@@ -54,10 +53,9 @@
     </div>
   </div>
 </nav>
-</header>
 <!-- lista para tablet -->
 <nav class="lista d-none d-sm-block d-md-block d-lg-none">
-<div class= "lista-tablet"> 
+<div class="lista-tablet "> 
   <ul class="d-flex  align-item-center">
     <li class="border border-light outline-dark rounded-pill">
       <a class="text-light" align="center" href="index.html">INICIO</a>
@@ -102,6 +100,17 @@
   </section>
   <aside class="d-none d-lg-block">
   </aside>
+  <!-- seccion mobile -->
+  <div class="container">
+    <div class="row">
+      <div class="col-md-12 col-sm-12 col-xs-12">
+        <div class="img-column">
+          <img src="imagenes/tabas3.jpg" alt="Imagen 1" class="img-responsive">
+          <img src="imagenes/tabas2.jpg" alt="Imagen 2" class="img-responsive">
+        </div>
+      </div>
+    </div>
+  </div>
 <!-- pie de página -->
 <footer class="footer mt-5 bg-dark text-light text-center">
     <h1 class="text-light" align="center">COMODIDAD EN TUS PIES</h1>
