--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
   <aside class="d-none d-lg-block">
   </aside>
   <!-- seccion mobile -->
-  <div class="container">
+  <div class="container d-block d-sm-none d-md-none d-lg-none">
     <div class="row">
       <div class="col-md-12 col-sm-12 col-xs-12">
         <div class="img-column">
