--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 <body class="bg-black">
 <!-- encabezado -->
-<nav class="navbar navbar-expand-sm bg-black">
+<nav class="navbar navbar-expand-lg bg-black">
   <div class="container-fluid">
     <a class="navbar-brand" align="left" href="#"><img src="imagenes/logomax.jpg" width="80" alt="logo 1"></a>
     <button class="navbar-toggler bg-light" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
@@ -101,7 +101,7 @@
   <aside class="d-none d-lg-block">
   </aside>
   <!-- seccion mobile -->
-  <div class="container d-block d-sm-none d-md-none d-lg-none">
+  <div class="container d-none d-sm-block d-md-none">
     <div class="row">
       <div class="col-md-12 col-sm-12 col-xs-12">
         <div class="img-column">
