--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <li class="nav-item border border-light outline-dark rounded-pill ms-1 mb-2">
           <a class="nav-link text-light" align="center" href="contacto.html">CONTACTO</a>
         </li>
-        <div class="d-lg-none">
+        <div class="d-xl-none d-xxl-block">
         <li class="nav-item border border-light outline-dark rounded-pill ms-1 mb-2 ">
           <a class="nav-link text-light" align="center" href="compra.html">COMPRAS</a>
         </li>
@@ -48,13 +48,13 @@
     </div> 
     </div>
     <!-- compra -->
-    <div class="compra d-none d-sm-block me-1">
+    <div class="compra d-none d-xl-block d-xxl-blok me-1">
       <button class="btn" type="button" ><a href="compra.html"><img class="img-fluid" src="imagenes/compra.png" width="60" alt=" comprag"></a></button>
     </div>
   </div>
 </nav>
 <!-- lista para tablet -->
-<nav class="lista d-none d-sm-block d-md-block d-lg-none">
+<nav class="lista d-none d-sm-none d-md-block d-lg-none">
 <div class="lista-tablet "> 
   <ul class="d-flex  align-item-center">
     <li class="border border-light outline-dark rounded-pill">
