--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
   </div>
 </nav>
 <!-- lista para tablet -->
-<nav class="lista d-none d-sm-none d-md-block d-lg-none">
+<nav class="lista d-none d-sm-none d-md-none d-lg-none">
 <div class="lista-tablet "> 
   <ul class="d-flex  align-item-center">
     <li class="border border-light outline-dark rounded-pill">
@@ -85,7 +85,7 @@
                         <img class="im1 position-absolute translate-middle " src="imagenes/tabas 1.jpg" width="250">                                       
   </section>
   <!-- seccion tablet -->
-  <div class=" seccion-tablet d-flex d-none d-sm-block d-md-block d-lg-none">
+  <div class=" seccion-tablet d-flex d-none d-sm-none d-md-none d-lg-none">
     <img class="ima-tablet" src="imagenes/tabas2.jpg" width="300">
     <img class="tabimg" src="imagenes/tabas3.jpg" width="325">
   </div>
