--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 <body class="bg-black">
 <!-- encabezado -->
-<nav class="navbar navbar-expand-lg bg-black">
+<nav class="navbar navbar-expand-dm bg-black">
   <div class="container-fluid">
     <a class="navbar-brand" align="left" href="#"><img src="imagenes/logomax.jpg" width="80" alt="logo 1"></a>
     <button class="navbar-toggler bg-light" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
