--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <li class="nav-item border border-light outline-dark rounded-pill ms-1 mb-2">
           <a class="nav-link text-light" align="center" href="contacto.html">CONTACTO</a>
         </li>
-        <div class="d-xl-none d-xxl-block">
+        <div class="d-lg-none">
         <li class="nav-item border border-light outline-dark rounded-pill ms-1 mb-2 ">
           <a class="nav-link text-light" align="center" href="compra.html">COMPRAS</a>
         </li>
@@ -48,13 +48,13 @@
     </div> 
     </div>
     <!-- compra -->
-    <div class="compra d-none d-xl-block d-xxl-blok me-1">
+    <div class="compra d-none d-sm-block me-1">
       <button class="btn" type="button" ><a href="compra.html"><img class="img-fluid" src="imagenes/compra.png" width="60" alt=" comprag"></a></button>
     </div>
   </div>
 </nav>
 <!-- lista para tablet -->
-<nav class="lista d-none d-sm-none d-md-none d-lg-none">
+<nav class="lista d-none d-sm-block d-md-block d-lg-none">
 <div class="lista-tablet "> 
   <ul class="d-flex  align-item-center">
     <li class="border border-light outline-dark rounded-pill">
@@ -85,7 +85,7 @@
                         <img class="im1 position-absolute translate-middle " src="imagenes/tabas 1.jpg" width="250">                                       
   </section>
   <!-- seccion tablet -->
-  <div class=" seccion-tablet d-flex d-none d-sm-none d-md-none d-lg-none">
+  <div class=" seccion-tablet d-flex d-none d-sm-block d-md-block d-lg-none">
     <img class="ima-tablet" src="imagenes/tabas2.jpg" width="300">
     <img class="tabimg" src="imagenes/tabas3.jpg" width="325">
   </div>
@@ -100,17 +100,6 @@
   </section>
   <aside class="d-none d-lg-block">
   </aside>
-  <!-- seccion mobile -->
-  <div class="container d-none d-sm-block d-md-none">
-    <div class="row">
-      <div class="col-md-12 col-sm-12 col-xs-12">
-        <div class="img-column">
-          <img src="imagenes/tabas3.jpg" alt="Imagen 1" class="img-responsive">
-          <img src="imagenes/tabas2.jpg" alt="Imagen 2" class="img-responsive">
-        </div>
-      </div>
-    </div>
-  </div>
 <!-- pie de página -->
 <footer class="footer mt-5 bg-dark text-light text-center">
     <h1 class="text-light" align="center">COMODIDAD EN TUS PIES</h1>
