--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="author" content="Hander Ch">
     <meta name="description" content="venta de zapatillas">
-    <meta name="" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Shoes Store</title>
     <link rel="icon" type="image/x-icon" href="imagenes/pngegg.png">
     <link rel="stylesheet" href="inicio.css">
@@ -73,33 +73,25 @@
 </div>
 </nav>
 <!-- seccion imágenes -->
-  <section class="hero align-items-strecht expand-sm">   
-                      <div class="bot d-none d-lg-block">
-                        <button class="uno fs-3 text-light"><b>Recién <br>Llegados</b><svg class="tres text-black mb-4" xmlns="http://www.w3.org/2000/svg" width="35" height="35" fill="currentColor" class="bi bi-arrow-right-square-fill" viewBox="0 0 16 16">
-                          <path d="M0 14a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2H2a2 2 0 0 0-2 2zm4.5-6.5h5.793L8.146 5.354a.5.5 0 1 1 .708-.708l3 3a.5.5 0 0 1 0 .708l-3 3a.5.5 0 0 1-.708-.708L10.293 8.5H4.5a.5.5 0 0 1 0-1"/>
-                        </svg></button>
-                        <button class="dos fs-3 text-light"><b>Mas <br>Vendidos</b><svg class="cuatro text-black mb-4" xmlns="http://www.w3.org/2000/svg" width="35" height="35" fill="currentColor" class="bi bi-arrow-right-square-fill" viewBox="0 0 16 16">
-                          <path d="M0 14a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2H2a2 2 0 0 0-2 2zm4.5-6.5h5.793L8.146 5.354a.5.5 0 1 1 .708-.708l3 3a.5.5 0 0 1 0 .708l-3 3a.5.5 0 0 1-.708-.708L10.293 8.5H4.5a.5.5 0 0 1 0-1"/>
-                        </svg></button>
-                      </div>
-                        <img class="im1 position-absolute translate-middle " src="imagenes/tabas 1.jpg" width="250">                                       
-  </section>
-  <!-- seccion tablet -->
-  <div class=" seccion-tablet d-flex d-none d-sm-block d-md-block d-lg-none">
-    <img class="ima-tablet" src="imagenes/tabas2.jpg" width="300">
-    <img class="tabimg" src="imagenes/tabas3.jpg" width="325">
+  <section>
+  <button class="con fs-1 border-light text-light ms-4">INICIO</button>
+  <div class="container mt-5 ">
+    <div class="row">
+        <div class="col-md-6">
+          <img src="imagenes/tabas2.jpg" alt="Imagen 1" class="imagen">
+          <button class="btn text  border-black " ><a class=" text-light" href="#">RECIEN LLEGADOS</a></button>
+          <br>
+          <br>
+          <br>
+          <button class="btn  border-black"><a class="text-light" href="#">MAS VENDIDOS</a></button>
+        </div>
+      <div class="col-md-6">
+          <img src="imagenes/tabas3.jpg" alt="Imagen 2" class="imagen">
+          
+      </div>
+    </div>
   </div>
-  <div class="d-none d-sm-block d-md-block d-lg-none">
-    <button class="uno-tablet fs-3 text-light"><b>Recién <br>Llegados</b><svg class="tres text-black mb-4" xmlns="http://www.w3.org/2000/svg" width="35" height="35" fill="currentColor" class="bi bi-arrow-right-square-fill" viewBox="0 0 16 16">
-      <path d="M0 14a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2H2a2 2 0 0 0-2 2zm4.5-6.5h5.793L8.146 5.354a.5.5 0 1 1 .708-.708l3 3a.5.5 0 0 1 0 .708l-3 3a.5.5 0 0 1-.708-.708L10.293 8.5H4.5a.5.5 0 0 1 0-1"/>
-    </svg></button>
-    <button class="dos-tablet fs-3 text-light"><b>Mas <br>Vendidos</b><svg class="cuatro text-black mb-4" xmlns="http://www.w3.org/2000/svg" width="35" height="35" fill="currentColor" class="bi bi-arrow-right-square-fill" viewBox="0 0 16 16">
-      <path d="M0 14a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2H2a2 2 0 0 0-2 2zm4.5-6.5h5.793L8.146 5.354a.5.5 0 1 1 .708-.708l3 3a.5.5 0 0 1 0 .708l-3 3a.5.5 0 0 1-.708-.708L10.293 8.5H4.5a.5.5 0 0 1 0-1"/>
-    </svg></button>
-  </div>
-  </section>
-  <aside class="d-none d-lg-block">
-  </aside>
+</section>
 <!-- pie de página -->
 <footer class="footer mt-5 bg-dark text-light text-center">
     <h1 class="text-light" align="center">COMODIDAD EN TUS PIES</h1>
