--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     </div>
     <!-- compra -->
     <div class="compra d-none d-sm-block me-1">
-      <button class="btn" type="button" ><a href="compra.html"><img class="img-fluid" src="imagenes/compra.png" width="60" alt=" comprag"></a></button>
+      <button class="btn1" type="button" ><a href="compra.html"><img class="img-fluid" src="imagenes/compra.png" width="60" alt=" comprag"></a></button>
     </div>
   </div>
 </nav>
